--- a/C++/Makefile
+++ b/C++/Makefile
@@ -38,12 +38,16 @@ ALGO_SRCS = $(wildcard $(ALGO_DIR)/*.cpp)
 HEUR_SRCS = $(wildcard $(HEUR_DIR)/*.cpp)
 MAIN_SRC = main.cpp
 UTILITY_SRC = $(TOOLS_DIR)/Utility.cpp
+LOGGER_SRC = $(TOOLS_DIR)/Logger.cpp
+BENCHMARK_SRC = $(TOOLS_DIR)/Benchmark.cpp
 
 # Object files
 ALGO_OBJS = $(patsubst $(ALGO_DIR)/%.cpp,$(OBJ_DIR)/%.o,$(ALGO_SRCS))
 HEUR_OBJS = $(patsubst $(HEUR_DIR)/%.cpp,$(OBJ_DIR)/%.o,$(HEUR_SRCS))
 MAIN_OBJ = $(OBJ_DIR)/main.o
 UTILITY_OBJ = $(OBJ_DIR)/Utility.o
+LOGGER_OBJ = $(OBJ_DIR)/Logger.o
+BENCHMARK_OBJ = $(OBJ_DIR)/Benchmark.o
 
 # Executable
 MAIN_EXEC = $(BIN_DIR)/main
@@ -88,6 +92,20 @@ $(UTILITY_OBJ): $(UTILITY_SRC)
 	@echo
 	@echo "$(GREEN_COLOR)[SUCCESS]: Utility.cpp compiled!$(RESET_COLOR)"
 
+# Compile logger object file
+$(LOGGER_OBJ): $(LOGGER_SRC)
+	@echo "$(MAGENTA_COLOR)[BUILD]: Compiling Logger.cpp...$(RESET_COLOR)"
+	$(CXX) $(CXXFLAGS) -c $< -o $@
+	@echo
+	@echo "$(GREEN_COLOR)[SUCCESS]: Logger.cpp compiled!$(RESET_COLOR)"
+
+# Compile benchmark object file
+$(BENCHMARK_OBJ): $(BENCHMARK_SRC)
+	@echo "$(MAGENTA_COLOR)[BUILD]: Compiling Benchmark.cpp...$(RESET_COLOR)"
+	$(CXX) $(CXXFLAGS) -c $< -o $@
+	@echo
+	@echo "$(GREEN_COLOR)[SUCCESS]: Benchmark.cpp compiled!$(RESET_COLOR)"
+
 # Compile algorithm source files to object files
 $(OBJ_DIR)/%.o: $(ALGO_DIR)/%.cpp
 	@echo "$(CYAN_COLOR)[BUILD]: Compiling algorithm file: $<...$(RESET_COLOR)"
@@ -103,7 +121,7 @@ $(OBJ_DIR)/%.o: $(HEUR_DIR)/%.cpp
 	@echo "$(GREEN_COLOR)[SUCCESS]: $(notdir $<) compiled!$(RESET_COLOR)"
 
 # Link main executable with all object files
-$(MAIN_EXEC): $(MAIN_OBJ) $(ALGO_OBJS) $(HEUR_OBJS) $(UTILITY_OBJ)
+$(MAIN_EXEC): $(MAIN_OBJ) $(ALGO_OBJS) $(HEUR_OBJS) $(UTILITY_OBJ) $(LOGGER_OBJ) $(BENCHMARK_OBJ)
 	@echo "$(YELLOW_COLOR)[BUILD]: Linking object files to create the executable...$(RESET_COLOR)"
 	$(CXX) $(CXXFLAGS) $^ -o $@
 	@echo
